# use-ai.rs

./: .gitignore  Cargo.toml  README.md
crates/api-ai/lib-staging/: Cargo.toml
crates/core-ai/lib-gpu/: Cargo.toml
crates/core-ai/lib-test/: Cargo.toml
target-cpu/: Cargo.toml
target-cpu/crates/ai-api/lib-staging/: Cargo.toml
target-cpu/crates/ai-core/lib-core/: README.md
target-cpu/crates/ai-core/lib-core/src/: lib.rs
target-cpu/crates/ai-core/lib-core/src/math/: mod.rs
target-cpu/crates/ai-examples/showoff/: Cargo.toml
target-gpu/: README.md
target-gpu/lib-cuda/: Cargo.toml
